# vidavox

./: .gitignore  README.md  pyproject.toml  quicktest.py  requirements.txt  result.json  result_with_keywords.json  result_without_keywords.json  setup.cfg  test.py  testdocloader.py
backup/: test_backup.pkl
checkpoints/: multi_user_demo_state.pkl  my_rag_state.pkl
vidavox/: __init__.py  core.py  pipeline.py  settings.py
vidavox/core/: __init__.py  engine.py  pyrag.py  rag.py  vector_search.py
vidavox/core/agent/: asistent.py
vidavox/core/indices/: store.py
vidavox/dataset/: generator.py  keypair_generator.py  models.py  prompt_template.py  response_parser.py
vidavox/document/: __init__.py  config.py  doc_manager.py  doc_processor.py  file_processor.py  loader.py  node.py  processor.py  splitter.py
vidavox/document_store/: store.py
vidavox/document_store/models/: __init__.py  dense_vector.py  document.py  sparse_vector.py
vidavox/generation/: llm.py
vidavox/memory/: __init__.py  memory.py
vidavox/memory/implementation/: async_memory.py
vidavox/memory/models/: __init__.py  message.py  user.py
vidavox/rag/: doc_splitter.py  document_manager.py  state_manager.py
vidavox/rag/context/: doc_processing.py
vidavox/rag/steps/: par_doc_splitter_step.py  uni_doc_base_step.py  uni_doc_loader_step.py  uni_doc_splitter_step.py
vidavox/retrieval/: __init__.py  base_search.py  bm25_search.py  faiss_search.py  hybrid_search.py  provider.py
vidavox/retrieval_system/: __init__.py
vidavox/retrieval_system/batch/: __init__.py  batch_processor.py
vidavox/retrieval_system/core/: __init__.py  engine.py
vidavox/retrieval_system/formatters/: __init__.py  base.py  custom.py  default.py
vidavox/retrieval_system/persistence/: state_manager.py
vidavox/retrieval_system/processors/: __init__.py  base.py  csv_processor.py  excel_processor.py  file_processor.py
vidavox/retrieval_system/search/: __init__.py  search_manager.py
vidavox/retrieval_system/utils/: __init__.py  helpers.py  process_failure.py  validation.py
vidavox/retriever/: base.py  bm25_retriever.py  factory_retriever.py  faiss_retriever.py  hybrid_retriever.py  search_manager.py
vidavox/retriever/components/: retriever.py
vidavox/retriever/core/: engine.py  temp.py
vidavox/retriever/doc_processors/: __init__.py  base.py  batch.py  csv_processor.py  excel_processor.py  file_processor.py  orchestrator.py
vidavox/retriever/formatters/: __init__.py  base.py  custom.py  default.py  search.py
vidavox/retriever/managers/: access_manager.py  doc_manager.py  index_manager.py
vidavox/retriever/schema/: data.py
vidavox/retriever/utils/: token_counter.py
vidavox/schemas/: common.py
vidavox/search/: bm25_search.py  faiss_search.py  hybrid_search.py  persistence_search.py
vidavox/utils/: doc_tracker.py  gpu.py  hub_utils.py  ntlk_setup.py  pretty_logger.py  script_tracker.py  token_counter.py  word_extractor.py
