[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vidavox"
version = "0.1.0"
description = "A vector store indexing package"
authors = ["Dedy Ariansyah <ariansyah@vidavox.ai>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.21.0"
scikit-learn = ">=1.0.0"
langchain-community = "0.3.17"
tiktoken = "*"
faiss-cpu = "*"
sentence-transformers = "*"
nltk = "*"
rank-bm25 = "*"
tqdm = "==4.67.1"
docx2txt = "==0.8"
transformers = "==4.48.3"
unstructured = "*"
keybert = "*"
markdown = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
llama-index = "^0.12.19"
smolagents = "^1.9.2"


