[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vidavox"
version = "0.1.0"
description = "A vector store indexing package"
authors = ["Dedy Ariansyah <ariansyah@vidavox.ai>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.21.0"
scikit-learn = ">=1.0.0"
langchain = "==0.3.17"
langchain-community = "==0.3.16"
langchain-core = "==0.3.33"
langchain-text-splitters = "==0.3.5"
tiktoken = "*"
faiss-cpu = "*"
sentence-transformers = "*"
nltk = "*"
rank-bm25 = "*"
tqdm = "==4.67.1"
docx2txt = "==0.8"
transformers = "==4.48.2"
unstructured = "*"
keybert = "*"
markdown = "*"
datasets = "==3.2.0"
protobuf = ">=3.20,<6.0.0"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
llama-index = "^0.12.19"
smolagents = "^1.9.2"

[tool.poetry.group.dev.dependencies]
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pipdeptree = "^2.25.0"
grep = "^0.3.2"


