[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vidavox"
version = "0.1.0"
description = "A vector store indexing package"
authors = ["Dedy Ariansyah <ariansyah@vidavox.ai>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
torch = { version = "2.6.0", source = "pytorch" }
python = ">=3.11,<3.13"
numpy = "1.26.4"
scikit-learn = "1.6.1"
langchain = "==0.3.17"
langchain-community = ">=0.3.16"
langchain-core = "0.3.34"
langchain-text-splitters = "0.3.6"
tiktoken = "0.8.0"
faiss-cpu = "1.10.0"
nltk = "3.9.1"
rank-bm25 = "0.2.2"
tqdm = "4.67.1"
docx2txt = "0.8"
transformers = "4.48.3"
unstructured = "0.16.20"
keybert = "0.9.0"
markdown = "3.7"
datasets = "3.2.0"
protobuf = ">=3.20,<6.0.0"
openpyxl = "^3.1.5"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.12"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
attrs = "25.1.0"
backoff = "2.2.1"
beautifulsoup4 = "4.13.3"
certifi = "2025.1.31"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
colorama = "0.4.6"
cryptography = "44.0.0"
dataclasses-json = "0.6.7"
dill = "0.3.8"
emoji = "2.14.1"
eval-type-backport = "0.2.2"
filelock = "3.17.0"
filetype = "1.2.0"
frozenlist = "1.5.0"
fsspec = "2024.9.0"
greenlet = "3.1.1"
h11 = ">=0.14.0"
html5lib = "1.1"
httpcore = "1.0.7"
httpx = "0.28.1"
httpx-sse = "0.4.0"
huggingface-hub = "0.28.1"
idna = "3.10"
jinja2 = "3.1.5"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
langdetect = "1.0.9"
langsmith = "0.3.8"
lxml = "5.3.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
olefile = "0.47"
orjson = "3.10.15"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
propcache = "0.2.1"
psutil = "6.1.1"
pyarrow = "19.0.0"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pypdf = "5.3.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-iso639 = "2025.2.8"
python-magic = "0.4.27"
python-oxmsg = "0.0.2"
pytz = "2025.1"
pyyaml = "6.0.2"
rapidfuzz = "3.12.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
safetensors = "0.5.2"
scipy = "1.15.1"
setuptools = "75.8.0"
six = "1.17.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.38"
sympy = "1.13.1"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tokenizers = "0.21.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2025.1"
unstructured-client = "0.29.0"
urllib3 = "2.3.0"
webencodings = "0.5.1"
wrapt = "1.17.2"
xxhash = "3.5.0"
yarl = "1.18.3"
zstandard = "0.23.0"
nvitop = "^1.4.2"
rapidocr-onnxruntime = "^1.4.4"
starlette = "^0.46.2"
pypdf2 = "^3.0.1"
pymupdf = "^1.26.0"




[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
llama-index = "^0.12.19"
smolagents = "^1.9.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pipdeptree = "^2.25.0"
grep = "^0.3.2"
pytest-asyncio = "^0.23.8"
hypothesis = "^6.131.8"


