[metadata]
name = vidavox
version = 0.1.0
description = A vector store indexing package
author = Dedy Ariansyah
author_email = ariansyah@vidavox.ai
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scikit-learn>=1.0.0
    langchain-community==0.3.17
    tiktoken
    faiss-cpu
    sentence-transformers
    nltk
    rank-bm25
    tqdm==4.67.1
    docx2txt==0.8
    transformers==4.48.3
    unstructured
    bert
    markdown

